--- a/app/src/home/footer.sass
+++ b/app/src/home/footer.sass
@@ -1,9 +1,10 @@
 footer
   width: 100vw
-  background-color: $color-dark
   color: $color-light
 
   font-family: 'Open Sans'
+
+  margin-top: 5vh
 
   @media (max-width: 500px)
     padding: 5vw
