Only use one scroll threshold

--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -90,6 +90,8 @@
 
 .top-bar.black
   color: $color-dark
+  background-color: $color-light
+
   $shadow-color: rgba(0, 0, 0, .15)
   box-shadow: 0 4px 4px 0 $shadow-color, 0 1px 8px 0 $shadow-color
 
