Force 0 border radius on inputs
Useful on iOS

--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -34,6 +34,7 @@
       width: 100%
 
       border: 0
+      border-radius: 0
       outline: 0
       border-bottom: .1em solid $unfocused-color
 
