--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -57,7 +57,7 @@ html
         h2.center.caps Our team
         .cards-container
           .member-info
-            img(src='https://arkisio.now.sh/profile/1Defenestrator' alt='Luke Taylor')
+            img(src='https://arkisio.now.sh/profile/1Defenestrator', alt='Luke Taylor')
             .name Luke Taylor
             a(href='https://twitter.com/1Defenestrator')
               span.handle @1Defenestrator
@@ -67,7 +67,7 @@ html
               i.ion.ion-logo-github
 
           .member-info
-            img(src='https://arkisio.now.sh/profile/whitestmystery' alt='Isaac Cheruiyot')
+            img(src='https://arkisio.now.sh/profile/whitestmystery', alt='Isaac Cheruiyot')
             .name Isaac Cheruiyot
             a(href='https://twitter.com/whitestmystery')
               span.handle @whitestmystery
@@ -77,7 +77,7 @@ html
               i.ion.ion-logo-github
 
           .member-info
-            img(src='https://arkisio.now.sh/profile/conqueror1776' alt='Elijah Tamarchenko')
+            img(src='https://arkisio.now.sh/profile/conqueror1776', alt='Elijah Tamarchenko')
             .name Elijah Tamarchenko
             a(href='https://twitter.com/conqueror1776')
               span.handle @conqueror1776
@@ -87,7 +87,7 @@ html
               i.ion.ion-logo-github
 
           .member-info
-            img(src='https://arkisio.now.sh/profile/crimster123' alt='Luciano Crimi')
+            img(src='https://arkisio.now.sh/profile/crimster123', alt='Luciano Crimi')
             .name Luciano Crimi
             a(href='https://twitter.com/crimster123')
               span.handle @crimster123
@@ -101,14 +101,14 @@ html
 
       //- "Contact us" form
       section.contact
-        form.contact-form
+        form.contact-form(action='#')
           h4.center.caps Contact
           div
-            input(type='text' placeholder='First')
-            input(type='text' placeholder='Last')
-            input(type='email' placeholder='Email')
-          input(type='text' placeholder='Subject')
-          input(type='text' placeholder='Message')
+            input(type='text', placeholder='First')
+            input(type='text', placeholder='Last')
+            input(type='email', placeholder='Email')
+          input(type='text', placeholder='Subject')
+          input(type='text', placeholder='Message')
           button Send
 
       //- A bit of info at the bottom
