Make pug-lint shut up

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -29,10 +29,7 @@ html(lang='en')
   head
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
-    meta(
-      name='description',
-      content='Arkis is a software and technology company founded by Luke Taylor, Isaac Cheruiyot, Elijah Tamarchenko, and Luciano Crimi, students in New Paltz High School.'
-    )
+    meta(name='description', content='Arkis is a software and technology company founded by Luke Taylor, Isaac Cheruiyot, Elijah Tamarchenko, and Luciano Crimi, students in New Paltz High School.')
 
     title Arkis
 
