--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -98,7 +98,7 @@ html(lang='en')
 
       //- "Contact us" form
       section.contact
-        form.contact-form(action='#')
+        form.contact-form(action='https://arkisio.now.sh/contact')
           h4.center.caps Contact
           div
             input(type='text', placeholder='First')
