form should POST

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -98,7 +98,7 @@ html(lang='en')
 
       //- "Contact us" form
       section.contact
-        form.contact-form(action='https://arkisio.now.sh/contact')
+        form.contact-form(action='https://arkisio.now.sh/contact', method='POST')
           h4.center.caps Contact
           div
             input(type='text', name='firstName', placeholder='First')
