Add id to form submit button

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -105,7 +105,7 @@ html(lang='en')
             input(type='text', name='lastName', placeholder='Last')
             input(type='email', name='email', placeholder='Email')
           input(type='text', name='message', placeholder='Message')
-          button Send
+          button#contact-form-submit Send
 
       //- A bit of info at the bottom
       footer
