Assign an ID to the contact form

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -97,7 +97,7 @@ html(lang='en')
       section#map
 
       //- "Contact us" form
-      section.contact
+      section#contact-form
         form.contact-form(action='https://arkisio.now.sh/contact', method='POST')
           h4.center.caps Contact
           div
