--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -97,8 +97,8 @@ html(lang='en')
       section#map
 
       //- "Contact us" form
-      section#contact-form
-        form.contact-form(action='https://arkisio.now.sh/contact', method='POST')
+      section.contact
+        form#contact-form(action='https://arkisio.now.sh/contact', method='POST')
           h4.center.caps Contact
           div
             input(type='text', name='firstName', placeholder='First')
