Add shake animation

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -105,7 +105,9 @@ html(lang='en')
             input(type='text', name='lastName', placeholder='Last')
             input(type='email', name='email', placeholder='Email')
           input(type='text', name='message', placeholder='Message')
-          button#contact-form-submit(type='button') Send
+
+          .button-container
+            button#contact-form-submit(type='button') Send
 
       //- A bit of info at the bottom
       footer
