--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -111,3 +111,23 @@
 
       &:active
         transform: translateZ(0) scale(.95)
+
+    .button-container.shake
+      animation: shake .5s
+
+
+@keyframes shake
+  0%
+    transform: translateX(0)
+
+  20%
+    transform: translateX(-5px)
+
+  40%
+    transform: translateX(5px)
+
+  60%
+    transform: translateX(-5px)
+
+  100%
+    transform: translateX(0)
