--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -98,7 +98,7 @@ html(lang='en')
 
       //- "Contact us" form
       section.contact
-        form#contact-form(action='https://arkisio.now.sh/contactt', method='POST')
+        form#contact-form(action='https://arkisio.now.sh/contact', method='POST')
           .normal-form-content
             h4.center.caps Contact
             div.inline-inputs
