Remove unnecessary div tag

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -101,7 +101,7 @@ html(lang='en')
         form#contact-form(action='https://arkisio.now.sh/contact', method='POST')
           .normal-form-content
             h4.center.caps Contact
-            div.inline-inputs
+            .inline-inputs
               input(type='text', name='firstName', placeholder='First')
               input(type='text', name='lastName', placeholder='Last')
               input(type='email', name='email', placeholder='Email')
