--- a/app/src/home/spinner.sass
+++ b/app/src/home/spinner.sass
@@ -1,5 +1,5 @@
 .spinner
-  border: 4px solid lighten($color-dark, 10)
+  border: 4px solid transparentize($color-light, .9)
   border-top: 4px solid $color-light
   border-radius: 50%
 
