Slightly lighter color on loading page of contact form
Contrast with footer is needed

--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -132,7 +132,7 @@
       transition: .5s opacity
 
     &.loading
-      background-color: $color-dark
+      background-color: lighten($color-dark, 8)
       color: $color-light
 
       .spinner
