--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -131,6 +131,19 @@
       opacity: 0
       transition: .5s opacity
 
+    .success,
+    .failure
+      position: absolute
+      top: 0
+      left: 0
+
+      width: 100%
+      height: 100%
+
+      display: none
+      opacity: 0
+      transition: 1s opacity
+
     &.loading
       background-color: lighten($color-dark, 8)
       color: $color-light
@@ -146,6 +159,16 @@
       .normal-form-content
         opacity: 0
         display: none
+
+    &.succeeded
+      .success
+        display: block
+        opacity: 1
+
+    &.failed
+      .failure
+        display: block
+        opacity: 1
 
 @keyframes shake
   0%
