--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -122,11 +122,12 @@
       transition: opacity .25s
 
     .spinner
-      width: 50px
-      height: 50px
+      $size: 3.2vw
+      width: $size
+      height: $size
       position: absolute
-      top: calc(50% - 25px)
-      left: calc(50% - 25px)
+      top: calc(50% - #{ $size / 2 })
+      left: calc(50% - #{ $size / 2 })
 
       opacity: 0
       transition: .5s opacity
