--- a/app/src/home/spinner.sass
+++ b/app/src/home/spinner.sass
@@ -1,6 +1,6 @@
 .spinner
-  border: 4px solid transparentize($color-light, .9)
-  border-top: 4px solid $color-light
+  border: .3vw solid transparentize($color-light, .9)
+  border-top: .3vw solid $color-light
   border-radius: 50%
 
   animation: 1s spin infinite linear
