Add expanding circle animation to contact form

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -111,6 +111,9 @@ html(lang='en')
             .button-container
               button#contact-form-submit(type='button') Send
 
+          //- Provides a backdrop for the result of the submission
+          .result-background
+
           //- View when message sends successfully
           .success
             h4.center.caps Message sent!
