--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -13,6 +13,8 @@
     width: 60vw
     height: 60vh
 
+    overflow: hidden
+
     padding: 1% 5%
 
     color: $color-dark
@@ -132,6 +134,24 @@
       opacity: 0
       transition: .5s opacity
 
+    .result-background
+      background-color: $color-light
+
+      width: 80vmax
+      height: 80vmax
+
+      position: absolute
+      top: 50%
+      left: 50%
+
+      border-radius: 50%
+
+      opacity: 0
+      pointer-events: none
+
+      transform: translate(-50%, -50%) scale(.02)
+      transition: .5s opacity, .5s transform cubic-bezier(.77, 0, .175, 1)
+
     .success,
     .failure
       position: absolute
@@ -141,35 +161,45 @@
       width: 100%
       height: 100%
 
-      display: none
+      pointer-events: none
       opacity: 0
-      transition: 1s opacity
+      transition: .5s opacity .4s
 
-    &.loading
+    // All states after button has been pressed
+    &.loading,
+    &.completed
       background-color: lighten($color-dark, 8)
+
+      .normal-form-content
+        opacity: 0
+
+      .result-background
+        opacity: 1
+
+    // While the POST request is in progress
+    &.loading
       color: $color-light
 
       .spinner
         opacity: 1
 
+    // After the POST request has either succeeded or failed
+    &.completed
       .normal-form-content
-        opacity: 0
-
-    &.succeeded,
-    &.failed
-      .normal-form-content
-        opacity: 0
         display: none
+
+      .result-background
+        transform: translate(-50%, -50%) scale(1)
 
     &.succeeded
       .success
-        display: block
         opacity: 1
+        pointer-events: auto
 
     &.failed
       .failure
-        display: block
         opacity: 1
+        pointer-events: auto
 
 @keyframes shake
   0%
