Remove track from spinner

--- a/app/src/home/spinner.sass
+++ b/app/src/home/spinner.sass
@@ -1,5 +1,5 @@
 .spinner
-  border: .3vw solid transparentize($color-light, .9)
+  border: .3vw solid transparent
   border-top: .3vw solid $color-light
   border-radius: 50%
 
