Restyle 'message sent' and 'message failed' text

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -116,11 +116,11 @@ html(lang='en')
 
           //- View when message sends successfully
           .success
-            h4.center.caps Message sent!
+            h4.center.caps Message sent
 
           //- View when message fails to send
           .failure
-            h4.center.caps Message failed to send
+            h4.center.caps Message failed
 
           //- Loading indicator as message fate is unknown
           .spinner
