--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -155,15 +155,21 @@
     .success,
     .failure
       position: absolute
-      top: 0
+      top: 30vh
       left: 0
 
       width: 100%
-      height: 100%
 
       pointer-events: none
       opacity: 0
       transition: .5s opacity .4s
+
+      transform: translateY(-50%)
+
+      h4
+        font-family: 'Open Sans', sans-serif
+        font-weight: 300
+        letter-spacing: .5em
 
     // All states after button has been pressed
     &.loading,
