--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -106,7 +106,7 @@ html(lang='en')
               input(type='text', name='firstName', placeholder='First')
               input(type='text', name='lastName', placeholder='Last')
               input(type='email', name='email', placeholder='Email')
-            input(type='text', name='message', placeholder='Message')
+            input(type='text', name='message', placeholder='Message', autocomplete='off')
 
             .button-container
               button#contact-form-submit(type='button') Send
