Letter spacing on contact button

--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -105,6 +105,7 @@
       font-size: 1em
       text-transform: uppercase
       text-align: center
+      letter-spacing: .3em
 
       transition: transform .25s
 
