--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -94,15 +94,14 @@
     button
       display: block
 
-      width: 20%
-      padding: .6em
+      padding: 1em 1.4em
       margin: 2em auto 0
       border: 0
 
       background-color: $color-dark
       color: $color-light
 
-      font-size: 1em
+      font-size: .9em
       text-transform: uppercase
       text-align: center
       letter-spacing: .3em
