--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -109,7 +109,7 @@ html(lang='en')
             input(type='text', name='message', placeholder='Message', autocomplete='off')
 
             .button-container
-              button#contact-form-submit(type='button') Send
+              button#contact-form-submit(type='button') Send your message
 
           //- Provides a backdrop for the result of the submission
           .result-background
