Lato instead of Open Sans
Also more thorough use of the font

--- a/app/src/home/member-info.sass
+++ b/app/src/home/member-info.sass
@@ -30,7 +30,7 @@
 
     position: relative
 
-    font-family: 'Open Sans' sans-serif
+    font-family: $sans-serif-stack
 
     transition: box-shadow .25s
     box-shadow: 0 4px 10px 0 $shadow-color, 0 4px 20px 0 $shadow-color
