--- a/app/src/home/mobile-menu.sass
+++ b/app/src/home/mobile-menu.sass
@@ -35,7 +35,7 @@
         color: $color-light
 
         text-decoration: none
-        font-family: 'Open Sans' sans-serif
+        font-family: $sans-serif-stack
         text-transform: uppercase
         font-size: calc(10px + 2vh)
 
