--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -44,6 +44,7 @@
 
       transition: border .25s, background-color .25s, color .25s
 
+      font-family: $sans-serif-stack
       font-size: 1em
       padding: .5em
       margin-top: 0
@@ -101,6 +102,7 @@
       background-color: $color-dark
       color: $color-light
 
+      font-family: $sans-serif-stack
       font-size: .9em
       text-transform: uppercase
       text-align: center
@@ -167,7 +169,7 @@
       transform: translateY(-50%)
 
       h4
-        font-family: 'Open Sans', sans-serif
+        font-family: $sans-serif-stack
         font-weight: 300
         letter-spacing: .5em
 
