--- a/app/src/home/fonts.sass
+++ b/app/src/home/fonts.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300,400,700')
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700|Lato:300,400,700')
 
 
 @font-face
@@ -6,3 +6,6 @@
   font-style: normal
   font-weight: bold
   src: local('Charis'), url('/home/fonts/charissil-b-webfont.woff2') format('woff2'), url('/home/fonts/charissil-b-webfont.woff') format('woff'), url('/home/fonts/CharisSIL-B.ttf') format('ttf')
+
+
+$sans-serif-stack: 'Lato', sans-serif
