--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -39,7 +39,7 @@
       color: inherit
       text-decoration: none
 
-      font-family: 'Open Sans' sans-serif
+      font-family: $sans-serif-stack
       text-transform: uppercase
       font-size: calc(6px + 1vh)
 
