Add missing text on mobile menu github link

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -71,7 +71,7 @@ html(lang='en')
           li
             a(href='') Contact
           li
-            a(href='https://github.com/arkis')
+            a(href='https://github.com/arkis') Github
 
       h1.headline.center.caps(data-build-delay='1') We are Arkis
 
