Slightly more letter spacing on top bar links

--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -42,6 +42,7 @@
       font-family: $sans-serif-stack
       text-transform: uppercase
       font-size: calc(6px + 1vh)
+      letter-spacing: .05em
 
       margin-left: 3vw
 
