--- a/app/src/404/main.sass
+++ b/app/src/404/main.sass
@@ -38,7 +38,4 @@ canvas
   left: 0
   width: 100vw
   height: 100vh
-  box-shadow: inset 0 0 25vh 10vh $black
-
-  @media (orientation: portrait)
-    box-shadow: inset 0 0 25vw 10vw $black
+  box-shadow: inset 0 0 25vmin 10vmin $black
