New font sizes using rem
More maintainable, more responsive

--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -45,7 +45,7 @@
       transition: border .25s, background-color .25s, color .25s
 
       font-family: $sans-serif-stack
-      font-size: 1em
+      font-size: .8rem
       padding: .5em
       margin-top: 0
       margin-bottom: .75em
@@ -103,7 +103,7 @@
       color: $color-light
 
       font-family: $sans-serif-stack
-      font-size: .9em
+      font-size: .7rem
       text-transform: uppercase
       text-align: center
       letter-spacing: .3em
