--- a/app/src/home/footer.sass
+++ b/app/src/home/footer.sass
@@ -16,7 +16,7 @@ footer
 
   .footer-logo
     float: right
-    font-size: calc(4vw + 1em)
+    font-size: 4rem
     font-family: 'Charis'
     top: 0
     transform: translateY(-2.5%)
