--- a/app/src/home/member-info.sass
+++ b/app/src/home/member-info.sass
@@ -56,7 +56,7 @@
 
     div.name
       font-weight: 700
-      font-size: 25px
+      font-size: 1.15rem
       text-align: center
 
       margin: .3em 0
@@ -68,6 +68,7 @@
       display: flex
       align-items: center
       justify-content: center
+      font-size: 0.8rem
 
       span
         margin-right: .5em
