--- a/app/src/home/mobile-menu.sass
+++ b/app/src/home/mobile-menu.sass
@@ -37,7 +37,7 @@
         text-decoration: none
         font-family: $sans-serif-stack
         text-transform: uppercase
-        font-size: calc(10px + 2vh)
+        font-size: 1.3rem
 
         opacity: 0
         transition: opacity 1.5s
