--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -41,7 +41,7 @@
 
       font-family: $sans-serif-stack
       text-transform: uppercase
-      font-size: calc(6px + 1vh)
+      font-size: .65rem
       letter-spacing: .05em
 
       margin-left: 3vw
@@ -68,7 +68,7 @@
           transform-origin: bottom left
 
       &.ion
-        font-size: calc(15px + 2vh)
+        font-size: 1.5em
         transition: transform .2s
 
 
@@ -78,7 +78,7 @@
     button
       border: 0
       outline: 0
-      font-size: calc(15px + 2vh)
+      font-size: 1.9rem
       color: inherit
       background: none
       cursor: pointer
