Move animated underline farther away from the top bar links

--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -56,7 +56,7 @@
         height: 1.5px
         position: absolute
         left: 0
-        bottom: 0
+        bottom: -.25em
         background-color: $color-light
         transform: scaleX(0)
         transform-origin: bottom right
