--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -95,7 +95,7 @@
     button
       display: block
 
-      padding: 1em 1.4em
+      padding: .75em 2em
       margin: 2em auto 0
       border: 0
 
