Transition mist gradient up with smoke

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -76,7 +76,7 @@ html(lang='en')
       h1.headline.center.caps(data-build-delay='1') We are Arkis
 
       canvas#mist(data-build-delay='2')
-      .mist-gradient
+      .mist-gradient(data-build-delay='2')
 
       //- "Our team" section containing info about the members of Arkis
       section.team-section
