--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -13,6 +13,9 @@
     width: 60vw
     height: 60vh
 
+    @media (orientation: portrait) and (max-width: 420px)
+      width: 80vw
+
     overflow: hidden
 
     padding: 1% 5%
@@ -79,6 +82,9 @@
         &:focus::placeholder
             color: $invalid-form-text
 
+      @media (orientation: portrait) and (max-width: 420px)
+        font-size: 1.1em
+
 
     div.inline-inputs
       display: flex
@@ -90,6 +96,9 @@
 
         &:last-child
           margin-right: 0
+
+      @media (orientation: portrait) and (max-width: 420px)
+        display: block
 
 
     button
