--- a/app/src/home/spinner.sass
+++ b/app/src/home/spinner.sass
@@ -7,6 +7,9 @@
 
   pointer-events: none
 
+  @media (orientation: portrait) and (max-width: 420px)
+    border-width: 1vw
+
 @keyframes spin
   from
     transform: rotate(0)
