Optimize contact form submit button for mobile
On mobile, it only says 'send' instead of 'send your message', and it takes up the full width of the contact form

--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -127,6 +127,14 @@
       &:active
         transform: translateZ(0) scale(.95)
 
+      @media (orientation: portrait) and (max-width: 420px)
+        width: 100%
+        font-size: 1.1em
+
+        & > span
+          display: none
+
+
     .button-container.shake
       animation: shake .5s
 
