Change mobile menu to opaque white after scrolling down
TODO: remove top bar shadow while menu is open

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -62,7 +62,7 @@ html(lang='en')
           button.mobile-only.ion.ion-md-menu
 
       //- Fullscreen menu for mobile devices
-      .mobile-menu.mobile-only
+      #mobile-menu.mobile-only
         ul
           li
             a(href='') About
