No top bar background when mobile menu is open
This ensures that if scrolling with the menu open, the mobile menu and top bar change colors in sync

--- a/app/src/home/top-bar.sass
+++ b/app/src/home/top-bar.sass
@@ -99,5 +99,8 @@
   .right a::after
     background-color: $color-dark
 
-  &.mobile-menu-open
-    box-shadow: none
+
+.top-bar.mobile-menu-open,
+.top-bar.open.mobile-menu-open
+  box-shadow: none
+  background-color: transparent
