--- a/app/src/home/member-info.sass
+++ b/app/src/home/member-info.sass
@@ -68,7 +68,7 @@
       display: flex
       align-items: center
       justify-content: center
-      font-size: 0.8rem
+      font-size: .8rem
 
       span
         margin-right: .5em
