Map behind contact form
This increases page size by a ton :( Haven't decided what to do about that yet. Maybe I'll prevent it from loading on mobile to conserve people's mobile data

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -42,6 +42,9 @@ html(lang='en')
       ga('create', 'UA-72586531-6', 'auto');
       ga('send', 'pageview');
 
+    script(src='https://api.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.js')
+    link(href='https://api.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.css', rel='stylesheet')
+
 
   body(ontouchstart='')
 
