--- a/app/src/home/main.sass
+++ b/app/src/home/main.sass
@@ -101,7 +101,7 @@ h5
     z-index: 2
 
 
-canvas
+canvas#mist
   margin-top: 60vh
 
   display: block
@@ -138,7 +138,7 @@ div.mist-gradient
 
   background: linear-gradient($c1 0%, $c2 10%, $c3 20%, $c4 30%, $c5 40%, $c6 50%, $c7 60%, $c8 70%, $c9 80%, $c10 90%, $c11 100%)
 
-canvas,
+canvas#mist,
 div.mist-gradient
   // Pre-build properties: transparent and not transformed into view.
   transform: translateY(40vh)
