--- a/app/src/home/map.sass
+++ b/app/src/home/map.sass
@@ -1,6 +1,11 @@
 #map
+  position: relative
   width: 100vw
   height: 66vh
 
   // Temportary
   background-color: lighten($color-dark, 75)
+
+  canvas
+    width: 100%
+    height: 100%
