--- a/app/src/home/contact.sass
+++ b/app/src/home/contact.sass
@@ -3,6 +3,8 @@
 .contact
   position: relative
 
+  transition: opacity .5s
+
   #contact-form
     position: absolute
 
@@ -24,8 +26,6 @@
     background-color: $color-light
 
     border-radius: 5px
-
-    opacity: .85
 
 
     $shadow-color: rgba(0, 0, 0, .16)
