--- a/app/src/home/map.sass
+++ b/app/src/home/map.sass
@@ -9,3 +9,7 @@
   canvas
     width: 100%
     height: 100%
+
+  // Make contact form almost completely transparent when map is hovered
+  &:hover ~ .contact
+    opacity: .1
