Static map to reduce page size
I'm happy that this supported pitch angles with 3D rendering

Closes #14

--- a/app/src/home/footer.sass
+++ b/app/src/home/footer.sass
@@ -1,10 +1,10 @@
 footer
+  position: relative
+
   width: 100vw
   color: $color-light
 
   font-family: $sans-serif-stack
-
-  margin-top: 5vh
 
   @media (max-width: 500px)
     padding: 5vw
@@ -12,7 +12,7 @@ footer
 
   .left
     float: left
-    margin: 10vh 0 10vh 10vw
+    margin: 15vh 0 10vh 10vw
 
   .footer-logo
     float: right
@@ -20,4 +20,4 @@ footer
     font-family: 'Charis'
     top: 0
     transform: translateY(-2.5%)
-    margin: 10vh 10vw 10vh 0
+    margin: 15vh 10vw 10vh 0
