--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -42,9 +42,6 @@ html(lang='en')
       ga('create', 'UA-72586531-6', 'auto');
       ga('send', 'pageview');
 
-    script(src='https://api.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.js')
-    link(href='https://api.mapbox.com/mapbox-gl-js/v0.32.1/mapbox-gl.css', rel='stylesheet')
-
 
   body(ontouchstart='')
 
@@ -132,9 +129,13 @@ html(lang='en')
 
       //- A bit of info at the bottom
       footer
+        .map-attribution
+          | &copy; <a href='https://www.mapbox.com/about/maps/'>Mapbox</a> &copy; <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> <strong><a href='https://www.mapbox.com/map-feedback/' target='_blank'>Improve this map</a></strong>
+
         .left
           h5 Arkis
           span.copyright Copyright &copy; 2017 Arkis
+
         .footer-logo A
 
   //- Literally everything because webpack
