Rename 'About' link to 'Team'

--- a/app/src/home/index.pug
+++ b/app/src/home/index.pug
@@ -53,7 +53,7 @@ html(lang='en')
       .top-bar(data-build-delay='0.1')
         a.letter-logo(href='/') A
         .right
-          a.desktop-only(href='') About
+          a.desktop-only(href='') Team
           a.desktop-only(href='') Products
           a.desktop-only(href='') Contact
           a.desktop-only.ion.ion-logo-github(href='https://github.com/arkis')
@@ -65,7 +65,7 @@ html(lang='en')
       #mobile-menu.mobile-only
         ul
           li
-            a(href='') About
+            a(href='') Team
           li
             a(href='') Products
           li
